web/eXoSkin/src/main/webapp/skin/less/social/skin/CommonComponents/Style.less
/*
This file is part of the Meeds project (https://meeds.io/).
Copyright (C) 2020 Meeds Association
contact@meeds.io
This program is free software; you can redistribute it and/or
modify it under the terms of the GNU Lesser General Public
License as published by the Free Software Foundation; either
version 3 of the License, or (at your option) any later version.
This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
Lesser General Public License for more details.
You should have received a copy of the GNU Lesser General Public License
along with this program; if not, write to the Free Software Foundation,
Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
*/
/*================= Suggester =================*/
.VuetifyApp .v-application {
  .identitySuggester {
    padding: 0 !important;
    margin: 12px 0 !important;
    white-space: normal;
  
    .v-input__slot {
      align-items: start !important;
  
      &:before, &:after {
        content: none !important;
      }
    }
  
    .v-select__slot {
      overflow: auto;
      max-height: 100%;
      display: block !important;
    }

    .v-select__selections {
      display: block !important;
      max-width: 100%;
      padding-left: 10px;
    }
  
    .identitySuggesterItem {
      background-color: @primaryColorLight !important;
      border: 1px solid @primaryDarkerColorGradientEnd !important;
      color: @btnPrimaryColor !important;
    }
  }

  .identitySuggesterInputStyle {
    border: 1px solid @inputBorder;
    border-radius: 5px;
  }

  .identitySuggesterFilterStyle {
    border-radius: 0px;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
    outline: 0 !important;
    border-bottom: 1px solid @borderColor;

    input {
      margin-top: 4px !important;
    }
  }

  .v-input--is-focused {
    &.identitySuggesterFilterStyle {
      border: 0px !important;
      border-bottom: 1px solid @primaryDarkerColorGradientEnd !important;
    }
  }
  .identitySuggestionMenuItemText {
    max-width: 300px;
  }
  /*================= Identity avatar item =================*/
  
    .exo-avatar-item-title, .exo-avatar-item-subtitle {
      flex: 1 1 100%;
    }
  
  /*================= Identity avatars List =================*/
  
  .notDisplayedIdentitiesOverlay {
    .notDisplayedIdentities {
      background: @baseColorLight;
      color: #fff;
      width: 100%;
      height: 100%;
      line-height: 38px;
    }
  }
  
  /*================= Identity avatar item =================*/
  .spaceAvatar {
    border-radius: 5px !important;
    > div {
      border-radius: 5px !important;
    }
  }

  .datePickerComponent {
    position: relative;

    &:after {
      color: @greyColor;
      font-family: "PLF-FONT-ICONS";
      content: "\e92a";
      font-size: 18px;
      position: absolute;
      right: 3px;
      top: 9px;
    }

    input {
      max-width: 100%;
      padding-right: 18px;
    }

    input[readonly] {
      cursor: pointer;
      background: #fff;
    }
  }
}

